[package]
name = "rama-http-headers"
description = "typed http headers for rama"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = ["http", "headers", "rama"]
categories = ["web-programming"]
authors = { workspace = true }
rust-version = { workspace = true }

[package.metadata.cargo-public-api-crates]
allowed = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
arc-swap = { workspace = true }
arcshift = { workspace = true, features = ["nightly"] }
ahash = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
const_format = { workspace = true }
httpdate = { workspace = true }
rama-core = { workspace = true }
rama-error = { workspace = true }
rama-http-types = { workspace = true }
rama-macros = { workspace = true }
rama-net = { workspace = true, features = ["http"] }
rama-utils = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_repr = { workspace = true }
sha1 = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tracing-test = { workspace = true }

[lints]
workspace = true
